# vehicle-rental

./: .gitignore  README.md  app.py  dbinit.py  pyproject.toml  start.bat  start.ps1
login/css/: login.css
rentalos/: __init__.py  auth.py  carinfo.py  carinfo_manager.py  carrental.py  carrepair.py  config.py  db.py  manager.py  profit.py
rentalos/static/css/: base.css  login.css  manager.css  table.css
rentalos/templates/: base.html  login.html
rentalos/templates/auth/: login.html  register.html
rentalos/templates/os/: add.html  hello.html  index.html  osbase.html
rentalos/templates/os/carinfo/: add.html  index.html  update.html
rentalos/templates/os/carrental/: add.html  index.html  info.html  update.html
rentalos/templates/os/carrepair/: add.html  info.html  update.html
rentalos/templates/os/profit/: index.html
templates/: hello.html  login.html
