[tool.poetry]
name = "vehicle-rental"
version = "0.1.0"
description = "大二下车辆租赁管理系统课设"
authors = ["AzideCupric <rukuy@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
tinydb = "^4.7.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
